--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "test:ember": "ember test"
   },
   "devDependencies": {
+    "@appuniversum/ember-appuniversum": "^3.0.0",
     "@babel/core": "^7.23.6",
     "@babel/eslint-parser": "^7.23.3",
     "@babel/plugin-proposal-decorators": "^7.23.6",
@@ -38,11 +39,13 @@
     "ember-auto-import": "^2.7.0",
     "ember-cli": "~5.5.0",
     "ember-cli-app-version": "^6.0.1",
+    "ember-cli-autoprefixer": "^2.0.0",
     "ember-cli-babel": "^8.2.0",
     "ember-cli-clean-css": "^3.0.0",
     "ember-cli-dependency-checker": "^3.3.2",
     "ember-cli-htmlbars": "^6.3.0",
     "ember-cli-inject-live-reload": "^2.1.0",
+    "ember-cli-sass": "^11.0.1",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-terser": "^4.0.2",
     "ember-data": "~5.3.0",
@@ -65,6 +68,7 @@
     "prettier": "^3.1.1",
     "qunit": "^2.20.0",
     "qunit-dom": "^2.0.0",
+    "sass": "^1.69.7",
     "stylelint": "^15.11.0",
     "stylelint-config-standard": "^34.0.0",
     "stylelint-prettier": "^4.1.0",
