--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "frontend-processendatabank",
   "version": "0.0.0",
   "private": true,
-  "description": "Small description for frontend-processendatabank goes here",
-  "repository": "",
+  "description": "Frontend for processes",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/MartijnBogaert/frontend-processendatabank.git"
+  },
   "license": "MIT",
-  "author": "",
+  "author": "Martijn Bogaert",
   "directories": {
     "doc": "doc",
     "test": "tests"
@@ -13,7 +16,7 @@
   "scripts": {
     "build": "ember build --environment=production",
     "lint": "concurrently \"npm:lint:*(!fix)\" --names \"lint:\"",
-    "lint:css": "stylelint \"**/*.css\"",
+    "lint:css": "stylelint --allow-empty-input \"**/*.scss\"",
     "lint:css:fix": "concurrently \"npm:lint:css -- --fix\"",
     "lint:fix": "concurrently \"npm:lint:*:fix\" --names \"fix:\"",
     "lint:hbs": "ember-template-lint .",
@@ -25,60 +28,87 @@
     "test:ember": "ember test"
   },
   "devDependencies": {
-    "@appuniversum/ember-appuniversum": "^3.0.0",
-    "@babel/core": "^7.23.6",
-    "@babel/eslint-parser": "^7.23.3",
-    "@babel/plugin-proposal-decorators": "^7.23.6",
+    "@appuniversum/ember-appuniversum": "^2.7.0",
+    "@babel/eslint-parser": "^7.21.3",
+    "@babel/plugin-proposal-decorators": "^7.21.0",
     "@ember/optional-features": "^2.0.0",
-    "@ember/string": "^3.1.1",
-    "@ember/test-helpers": "^3.2.1",
+    "@ember/string": "^3.0.1",
+    "@ember/test-helpers": "^2.9.3",
     "@glimmer/component": "^1.1.2",
     "@glimmer/tracking": "^1.1.2",
+    "@lblod/ember-acmidm-login": "2.0.0-beta.1",
+    "@lblod/ember-mock-login": "0.7.0",
     "broccoli-asset-rev": "^3.0.0",
-    "concurrently": "^8.2.2",
-    "ember-auto-import": "^2.7.0",
-    "ember-cli": "~5.5.0",
-    "ember-cli-app-version": "^6.0.1",
-    "ember-cli-autoprefixer": "^2.0.0",
-    "ember-cli-babel": "^8.2.0",
-    "ember-cli-clean-css": "^3.0.0",
-    "ember-cli-dependency-checker": "^3.3.2",
-    "ember-cli-htmlbars": "^6.3.0",
+    "concurrently": "^8.0.1",
+    "ember-auto-import": "^2.6.3",
+    "ember-breadcrumb-trail": "^0.2.0",
+    "ember-cli": "~4.12.1",
+    "ember-cli-app-version": "^6.0.0",
+    "ember-cli-babel": "^7.26.11",
+    "ember-cli-dependency-checker": "^3.3.1",
+    "ember-cli-dependency-lint": "^2.0.0",
+    "ember-cli-deprecation-workflow": "^2.0.0",
+    "ember-cli-htmlbars": "^6.2.0",
     "ember-cli-inject-live-reload": "^2.1.0",
-    "ember-cli-sass": "^11.0.1",
+    "ember-cli-sass": "^10.0.1",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-terser": "^4.0.2",
-    "ember-data": "~5.3.0",
-    "ember-fetch": "^8.1.2",
+    "ember-concurrency": "^2.2.1",
+    "ember-config-helper": "^0.1.3",
+    "ember-copy": "^2.0.1",
+    "ember-data": "~4.11.3",
+    "ember-inflector": "^4.0.2",
     "ember-load-initializers": "^2.1.2",
     "ember-modifier": "^4.1.0",
-    "ember-page-title": "^8.1.0",
-    "ember-qunit": "^8.0.2",
-    "ember-resolver": "^11.0.1",
-    "ember-source": "~5.5.0",
-    "ember-template-lint": "^5.13.0",
-    "ember-welcome-page": "^7.0.2",
-    "eslint": "^8.55.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-ember": "^11.11.1",
-    "eslint-plugin-n": "^16.4.0",
-    "eslint-plugin-prettier": "^5.0.1",
-    "eslint-plugin-qunit": "^8.0.1",
+    "ember-mu-transform-helpers": "^2.1.2",
+    "ember-page-title": "^7.0.0",
+    "ember-power-select": "^7.0.0",
+    "ember-qunit": "^6.2.0",
+    "ember-resolver": "^10.0.0",
+    "ember-resources": "^4.8.2",
+    "ember-simple-auth": "^4.2.1",
+    "ember-source": "~4.12.0",
+    "ember-template-lint": "^5.7.2",
+    "ember-truth-helpers": "^3.0.0",
+    "eslint": "^8.37.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-ember": "^11.5.0",
+    "eslint-plugin-n": "^16.0.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-qunit": "^7.3.4",
+    "husky": "^4.3.8",
+    "lint-staged": "^11.2.3",
     "loader.js": "^4.7.0",
-    "prettier": "^3.1.1",
-    "qunit": "^2.20.0",
+    "prettier": "^2.8.7",
+    "qunit": "^2.19.4",
     "qunit-dom": "^2.0.0",
-    "sass": "^1.69.7",
-    "stylelint": "^15.11.0",
-    "stylelint-config-standard": "^34.0.0",
-    "stylelint-prettier": "^4.1.0",
-    "tracked-built-ins": "^3.3.0",
-    "webpack": "^5.89.0"
+    "release-it": "^14.12.4",
+    "release-it-lerna-changelog": "^4.0.1",
+    "sass": "^1.49.7",
+    "stylelint": "^15.4.0",
+    "stylelint-config-standard": "^33.0.0",
+    "stylelint-config-standard-scss": "^9.0.0",
+    "stylelint-prettier": "^3.0.0",
+    "tracked-built-ins": "^3.1.1",
+    "webpack": "^5.78.0"
   },
   "engines": {
-    "node": ">= 18"
+    "node": "14.* || 16.* || >= 18"
   },
   "ember": {
     "edition": "octane"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": "eslint --cache --fix",
+    "*.hbs": "ember-template-lint --fix"
+  },
+  "volta": {
+    "node": "16.13.2",
+    "npm": "8.3.1"
   }
 }
