--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "lint:js:fix": "eslint . --fix",
     "start": "ember serve",
     "test": "concurrently \"npm:lint\" \"npm:test:*\" --names \"lint,test:\"",
-    "test:ember": "ember test"
+    "test:ember": "ember test",
+    "local": "ember serve --proxy https://dev.openproceshuis.lblod.info/"
   },
   "devDependencies": {
     "@appuniversum/ember-appuniversum": "^2.7.0",
