--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "lint:js:fix": "eslint . --fix",
     "start": "ember serve",
     "test": "concurrently \"npm:lint\" \"npm:test:*\" --names \"lint,test:\"",
-    "test:ember": "ember test",
-    "local": "ember serve --proxy https://dev.openproceshuis.lblod.info/"
+    "test:ember": "ember test"
   },
   "devDependencies": {
     "@appuniversum/ember-appuniversum": "^2.7.0",
