--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "ember-resources": "^4.8.2",
     "ember-simple-auth": "^4.2.1",
     "ember-source": "~4.12.0",
+    "ember-svg-jar": "^2.4.6",
     "ember-template-lint": "^5.7.2",
     "ember-truth-helpers": "^3.0.0",
     "eslint": "^8.37.0",
