--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "ember-data": "~4.11.3",
     "ember-inflector": "^4.0.2",
     "ember-load-initializers": "^2.1.2",
+    "ember-model-validator": "^4.7.0",
     "ember-modifier": "^4.1.0",
     "ember-mu-transform-helpers": "^2.1.2",
     "ember-page-title": "^7.0.0",
