--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Frontend for processes",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/MartijnBogaert/frontend-openproceshuis.git"
+    "url": "git+https://github.com/lblod/frontend-openproceshuis.git"
   },
   "license": "MIT",
   "author": "Martijn Bogaert",
@@ -22,6 +22,7 @@
     "lint:hbs": "ember-template-lint .",
     "lint:hbs:fix": "ember-template-lint . --fix",
     "lint:js": "eslint . --cache",
+    "release": "release-it",
     "lint:js:fix": "eslint . --fix",
     "start": "ember serve",
     "test": "concurrently \"npm:lint\" \"npm:test:*\" --names \"lint,test:\"",
