--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@ember/test-helpers": "^2.9.3",
     "@glimmer/component": "^1.1.2",
     "@glimmer/tracking": "^1.1.2",
-    "@lblod/ember-acmidm-login": "2.0.0-beta.1",
+    "@lblod/ember-acmidm-login": "^2.0.0",
     "@lblod/ember-mock-login": "^0.7.0",
     "broccoli-asset-rev": "^3.0.0",
     "concurrently": "^8.0.1",
