--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@glimmer/tracking": "^1.1.2",
     "@lblod/ember-acmidm-login": "^2.0.0",
     "@lblod/ember-mock-login": "^0.7.0",
+    "@triply/yasgui": "^4.2.20",
     "broccoli-asset-rev": "^3.0.0",
     "concurrently": "^8.0.1",
     "ember-auto-import": "^2.6.3",
