--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "ember-modifier": "^4.1.0",
     "ember-mu-transform-helpers": "^2.1.2",
     "ember-page-title": "^7.0.0",
+    "ember-plausible": "^0.2.0",
     "ember-power-select": "^7.0.0",
     "ember-qunit": "^6.2.0",
     "ember-resolver": "^10.0.0",
