--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "ember-cli-inject-live-reload": "^2.1.0",
     "ember-cli-sass": "^10.0.1",
     "ember-cli-sri": "^2.1.1",
+    "ember-cli-string-helpers": "^6.1.0",
     "ember-cli-terser": "^4.0.2",
     "ember-concurrency": "^2.2.1",
     "ember-config-helper": "^0.1.3",
