--- a/package.json
+++ b/package.json
@@ -118,6 +118,7 @@
     "npm": "8.3.1"
   },
   "dependencies": {
-    "bpmn-js": "^16.3.2"
+    "bpmn-js": "^16.3.2",
+    "file-saver": "^2.0.5"
   }
 }
