--- a/package.json
+++ b/package.json
@@ -119,6 +119,7 @@
   },
   "dependencies": {
     "bpmn-js": "^16.3.2",
-    "file-saver": "^2.0.5"
+    "file-saver": "^2.0.5",
+    "jspdf": "^2.5.1"
   }
 }
