--- a/package.json
+++ b/package.json
@@ -119,6 +119,7 @@
   },
   "dependencies": {
     "bpmn-js": "^16.3.2",
+    "client-zip": "^2.4.5",
     "file-saver": "^2.0.5",
     "jspdf": "^2.5.1",
     "svg64": "^2.0.0"
