--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend-openproceshuis",
-  "version": "1.2.0-0",
+  "version": "1.2.0",
   "private": true,
   "description": "Frontend for processes",
   "repository": {
