--- a/package.json
+++ b/package.json
@@ -32,49 +32,50 @@
     "@appuniversum/ember-appuniversum": "^3.8.0",
     "@babel/eslint-parser": "^7.21.3",
     "@babel/plugin-proposal-decorators": "^7.21.0",
-    "@ember/optional-features": "^2.0.0",
-    "@ember/string": "^3.0.1",
+    "@ember/optional-features": "^2.1.0",
+    "@ember/string": "^3.1.1",
     "@ember/test-helpers": "^5.2.2",
     "@glimmer/component": "^1.1.2",
     "@glimmer/tracking": "^1.1.2",
     "@lblod/ember-acmidm-login": "^2.0.0",
-    "@lblod/ember-mock-login": "^0.7.0",
+    "@lblod/ember-mock-login": "^0.13.0",
     "@triply/yasgui": "^4.2.20",
     "broccoli-asset-rev": "^3.0.0",
-    "concurrently": "^8.0.1",
-    "ember-auto-import": "^2.6.3",
+    "concurrently": "^8.2.2",
+    "ember-auto-import": "^2.10.0",
     "ember-breadcrumb-trail": "^0.2.0",
-    "ember-cli": "~4.12.1",
-    "ember-cli-app-version": "^6.0.0",
-    "ember-cli-babel": "^7.26.11",
-    "ember-cli-dependency-checker": "^3.3.1",
+    "ember-cli": "~5.12.0",
+    "ember-cli-app-version": "^7.0.0",
+    "ember-cli-babel": "^8.2.0",
+    "ember-cli-dependency-checker": "^3.3.3",
     "ember-cli-dependency-lint": "^2.0.0",
     "ember-cli-deprecation-workflow": "^2.0.0",
-    "ember-cli-htmlbars": "^6.2.0",
+    "ember-cli-htmlbars": "^6.3.0",
     "ember-cli-inject-live-reload": "^2.1.0",
     "ember-cli-sass": "^10.0.1",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-string-helpers": "^6.1.0",
     "ember-cli-terser": "^4.0.2",
-    "ember-concurrency": "^2.2.1",
+    "ember-concurrency": "^3.1.1",
     "ember-config-helper": "^0.1.3",
     "ember-copy": "^2.0.1",
-    "ember-data": "~5.3.0",
+    "ember-data": "~5.3.9",
+    "ember-focus-trap": "^1.1.1",
     "ember-inflector": "^4.0.2",
-    "ember-load-initializers": "^2.1.2",
+    "ember-load-initializers": "^3.0.1",
     "ember-model-validator": "^4.7.0",
-    "ember-modifier": "^4.1.0",
+    "ember-modifier": "^4.2.0",
     "ember-mu-transform-helpers": "^2.1.2",
-    "ember-page-title": "^7.0.0",
-    "ember-plausible": "^0.3.0",
-    "ember-power-select": "^7.0.0",
+    "ember-page-title": "^8.2.3",
+    "ember-plausible": "^0.4.0",
+    "ember-power-select": "^7.2.0",
     "ember-qunit": "^9.0.2",
-    "ember-resolver": "^10.0.0",
-    "ember-resources": "^4.8.2",
-    "ember-simple-auth": "^4.2.1",
+    "ember-resolver": "^13.1.0",
+    "ember-resources": "^6.5.1",
+    "ember-simple-auth": "^6.0.0",
     "ember-source": "~5.12.0",
     "ember-svg-jar": "^2.4.6",
-    "ember-template-lint": "^5.7.2",
+    "ember-template-lint": "^6.0.0",
     "ember-truth-helpers": "^3.1.1",
     "eslint": "^8.37.0",
     "eslint-config-prettier": "^8.8.0",
@@ -87,11 +88,11 @@
     "loader.js": "^4.7.0",
     "pdfjs-dist": "3.11.174",
     "prettier": "^2.8.7",
-    "qunit": "^2.19.4",
-    "qunit-dom": "^2.0.0",
+    "qunit": "^2.23.1",
+    "qunit-dom": "^3.4.0",
     "release-it": "^14.12.4",
     "release-it-lerna-changelog": "^4.0.1",
-    "sass": "^1.49.7",
+    "sass": "^1.83.4",
     "stylelint": "^15.4.0",
     "stylelint-config-standard": "^33.0.0",
     "stylelint-config-standard-scss": "^9.0.0",
