--- a/package.json
+++ b/package.json
@@ -30,10 +30,11 @@
   },
   "devDependencies": {
     "@appuniversum/ember-appuniversum": "^3.8.0",
-    "@babel/eslint-parser": "^7.21.3",
-    "@babel/plugin-proposal-decorators": "^7.21.0",
+    "@babel/core": "^7.25.2",
+    "@babel/eslint-parser": "^7.25.1",
+    "@babel/plugin-proposal-decorators": "^7.24.7",
     "@ember/optional-features": "^2.1.0",
-    "@ember/string": "^3.1.1",
+    "@ember/string": "^4.0.0",
     "@ember/test-helpers": "^5.2.2",
     "@glimmer/component": "^1.1.2",
     "@glimmer/tracking": "^1.1.2",
@@ -47,6 +48,7 @@
     "ember-cli": "~5.12.0",
     "ember-cli-app-version": "^7.0.0",
     "ember-cli-babel": "^8.2.0",
+    "ember-cli-clean-css": "^3.0.0",
     "ember-cli-dependency-checker": "^3.3.3",
     "ember-cli-dependency-lint": "^2.0.0",
     "ember-cli-deprecation-workflow": "^2.0.0",
@@ -77,31 +79,31 @@
     "ember-svg-jar": "^2.4.6",
     "ember-template-lint": "^6.0.0",
     "ember-truth-helpers": "^3.1.1",
-    "eslint": "^8.37.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-ember": "^11.5.0",
-    "eslint-plugin-n": "^16.0.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-qunit": "^7.3.4",
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-ember": "^12.2.1",
+    "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-qunit": "^8.1.2",
     "husky": "^4.3.8",
     "lint-staged": "^11.2.3",
     "loader.js": "^4.7.0",
     "pdfjs-dist": "3.11.174",
-    "prettier": "^2.8.7",
+    "prettier": "^3.3.3",
     "qunit": "^2.23.1",
     "qunit-dom": "^3.4.0",
     "release-it": "^14.12.4",
     "release-it-lerna-changelog": "^4.0.1",
     "sass": "^1.83.4",
-    "stylelint": "^15.4.0",
-    "stylelint-config-standard": "^33.0.0",
+    "stylelint": "^15.11.0",
+    "stylelint-config-standard": "^34.0.0",
     "stylelint-config-standard-scss": "^9.0.0",
-    "stylelint-prettier": "^3.0.0",
-    "tracked-built-ins": "^3.1.1",
-    "webpack": "^5.78.0"
+    "stylelint-prettier": "^4.1.0",
+    "tracked-built-ins": "^3.3.0",
+    "webpack": "^5.95.0"
   },
   "engines": {
-    "node": "14.* || 16.* || >= 18"
+    "node": ">= 18"
   },
   "ember": {
     "edition": "octane"
