--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "ember-inflector": "^4.0.2",
     "ember-load-initializers": "^3.0.1",
     "ember-model-validator": "^4.7.0",
-    "ember-modifier": "^4.2.0",
+    "ember-modifier": "^4.2.2",
     "ember-mu-transform-helpers": "^2.1.2",
     "ember-page-title": "^8.2.3",
     "ember-plausible": "^0.4.0",
@@ -126,6 +126,7 @@
     "client-zip": "^2.4.5",
     "file-saver": "^2.0.5",
     "jspdf": "^2.5.1",
+    "reactiveweb": "^1.4.2",
     "svg64": "^2.0.0"
   }
 }
